[fix]user/layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,7 @@
 @import "board_comment";
 @import "tag";
 @import "todolist";
+@import "user";
 
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
