--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -1,4 +1,4 @@
-<!--送ったフラッシュメッセージをヘッダー下に表示する、位置に注意-->
+<div class="container">
     <div class="row">
       <div class="col-xs-12">
         <div class="flash-message">
@@ -10,3 +10,4 @@
         </div>
       </div>
     </div>
+</div>
