--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,56 +1,49 @@
 <div class="row">
-    <div class="col-md-6">
-      <div class="form-set">
-      <h3>会員編集</h3>
+  <div class="col-md-8 offset-1">
+      <h3>
+        会員編集
+        <i class="fas fa-user-cog"></i>
+      </h3>
+    <div class="form-set">
 
-    <div class="form-horizontal">
-      <%= form_with model: [:public, @user], local: true do |f| %>
-      <%#= form_with(model: @user, url: public_user_path, local: true) do |f| %>
-        <%= render 'shared/error_messages', obj: @user %>
+      <div class="form-horizontal">
+        <%= form_with model: [:public, @user], local: true do |f| %>
+        <%#= form_with(model: @user, url: public_user_path, local: true) do |f| %>
+          <%= render 'shared/error_messages', obj: @user %>
 
-        <div class="form-group">
-          <%= attachment_image_tag(@user, :profile_image, :fill, 200, 200,fallback: 'no_image.jpg', size: '60x60') %><hr />
-          <%= f.attachment_field :profile_image %><hr />
+          <div class="form-group">
+            <%= attachment_image_tag(@user, :profile_image, :fill, 200, 200,fallback: 'no_image.jpg', size: '50x50') %><hr />
+            <%= f.attachment_field :profile_image %><hr />
 
-        </div>
+          </div>
 
-        <div class="form-group">
-          <%= f.label :"ユーザー名" %>
-          <%= f.text_field :name, class: 'form-control' %><hr />
-        </div>
+          <div class="form-group">
+            <%= f.label :"ユーザー名" %>
+            <%= f.text_field :name, class: 'form-control' %><hr />
+          </div>
 
-        <div class="form-group">
-      	   <%= f.label :メールアドレス %>
-      	   <%= f.email_field :email, class: 'form-control' %><hr />
-        </div>
+          <div class="form-group">
+        	   <%= f.label :メールアドレス %>
+        	   <%= f.email_field :email, class: 'form-control' %><hr />
+          </div>
 
-        <div class="form-group">
-          <%= f.label :自己紹介 %>
-          <%= f.text_area :introduction, class: 'form-control' %><hr />
-        </div>
+          <div class="form-group">
+            <%= f.label :自己紹介 %>
+            <%= f.text_area :introduction, class: 'form-control' %><hr />
+          </div>
 
-        <div class="form-group">
-          パスワード変更設定<hr />
-        </div>
+          <div class="form-group">
+            パスワード変更設定<hr />
+          </div>
 
-        <!--ボタンの位置調整-->
+          <div class="actions">
+             <%= f.submit "変更を保存する", class: "btn btn-outline-primary" %>
+              <%= link_to "戻る", public_user_path(@user), class: "btn btn-outline-dark" %>
+          </div>
 
-        <div class="actions">
-           <%= f.submit "変更を保存する", class: "btn btn-outline-primary" %>
-            <%= link_to "戻る", public_user_path(@user), class: "btn btn-outline-dark" %>
-        </div>
-
-      <% end %>
+        <% end %>
+      </div>
     </div>
-
-  </div>
-</div>
-
-<div class="col-md-5 offset-md-1">
-  <div class="form-set">
-    <h3>ラベルフォーム</h3>
-
-    <%#= render 'manage/tags/form', tag: @tag, obj: @tag %>
   </div>
 
 </div>
