[fix]board-layout

--- a/app/assets/stylesheets/board.scss
+++ b/app/assets/stylesheets/board.scss
@@ -5,10 +5,9 @@
 }
 
 
-.board-heading {
-  margin-bottom: 50px;
+.board-head { /*掲示板一覧見出し　ページ左側*/
+  margin-bottom: 28px;
 }
-
 
 
 .board-heading h4 {/*蛍光マーカー風*/
