--- a/app/views/manage/users/show.html.erb
+++ b/app/views/manage/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="col-md-8 offset-1">
 		<div class="float-right">
-			<%= link_to '戻る', manage_users_path, class: 'btn btn-dark' %>
+			<%= link_to '戻る', manage_users_path, class: 'btn btn-secondary' %>
 		</div>
 
 		<table class="table table-bordered table-hover">
@@ -9,8 +9,8 @@
 				<h3>会員情報</h3>
 			</thead>
 				<tr>
-					<th style="width: 30%", class="table-secondary"></th>
-					<td style="width: 70%"><%= attachment_image_tag(@user, :profile_image, :fill, 200, 200, fallback: 'no_image.jpg', size: '60x60') %></td>
+					<th style="width: 30%", class="table-secondary"><i class="fas fa-user-cog fa-2x"></i></th>
+					<td style="width: 70%"><%= attachment_image_tag(@user, :profile_image, :fill, 200, 200, fallback: 'no_image.jpg', size: '50x50') %></td>
 				</tr>
 				<tr>
 					<th class="table-secondary">ユーザー名</th>
@@ -30,10 +30,6 @@
 					<td><%= @user.email %></td>
 				</tr>
 				<tr>
-					<th class="table-secondary">ユーザーページ</th>
-					<td><%= link_to '確認する', public_user_path(@user), class: 'btn btn-default btn-sm btn-outline-primary' %></td>
-				</tr>
-				<tr>
 					<th class="table-secondary">会員ステータス</th>
 					<td>
 						<% if @user.is_deleted == false %>
@@ -44,9 +40,13 @@
 	 				</td>
 				</tr>
 				<tr>
+					<th class="table-secondary">ユーザーページ</th>
+					<td><%= link_to '確認する', public_user_path(@user), class: 'btn btn-default btn-sm btn-outline-primary' %></td>
+				</tr>
+				<tr>
 					<th class="table-secondary"></th>
 					<!--右側に位置させる-->
-					<td><%= link_to '編集する', edit_manage_user_path(@user), class: 'btn btn-lg btn-outline-success' %></td>
+					<td><%= link_to '編集する', edit_manage_user_path(@user), class: 'btn btn-lg btn-outline-success btn-block' %></td>
 				</tr>
 		</table>
 	</div>
