[add]admin-board

--- a/app/views/shared/_admin_header.html.erb
+++ b/app/views/shared/_admin_header.html.erb
@@ -13,7 +13,7 @@
         <li><%= link_to '  タグ一覧', manage_tags_path, class: 'glyphicon glyphicon-log-in' %></li>
         <li><%= link_to 'To doリスト設定(工事中)', manage_todolists_path, class: 'glyphicon glyphicon-log-in' %></li>
         <li><%#= link_to '  使い方ガイド修正フォーム', home_about_path, class: 'glyphicon glyphicon-log-in' %></li>
-        <li><%= link_to '  掲示板一覧', public_boards_path, class: 'glyphicon glyphicon-log-in' %></li>
+        <li><%= link_to '  掲示板一覧', manage_boards_path, class: 'glyphicon glyphicon-log-in' %></li>
 
         <!--虫眼鏡デザインにすること-->
         <li><%= link_to '  検索窓', manage_search_search_path %></li>
