--- a/app/views/public/todolists/_form.html.erb
+++ b/app/views/public/todolists/_form.html.erb
@@ -7,7 +7,7 @@
 		</div>
 		<div class="form-group">
 			<%= f.label :種別 %>
-			<%= f.collection_select :label, Todolist.all,:id, :label, :include_blank => true %>
+			<%#= f.collection_select :label, Todolist.all,:id, :label, :include_blank => true %>
 			<%#= f.collection_select :delivery_id, current_end_user.deliveries, :id, :view_address_and_name,:include_blank => true %>
 			 <%#= f.collection_check_boxes(:tag_ids, Tag.all, :id, :name) do |tag| %>
 		</div>
