--- a/app/views/public/boards/index.html.erb
+++ b/app/views/public/boards/index.html.erb
@@ -46,7 +46,7 @@
 	</p>
 	</div>
 
-	<table class="table table-hover table-responsive">
+	<table class="table table-hover">
 		<thead class="thead">
 		<!-- 	<th>画像</th> -->
 			<th>ユーザー名</th>
