--- a/app/views/public/todolists/_form.html.erb
+++ b/app/views/public/todolists/_form.html.erb
@@ -6,10 +6,17 @@
 			<%= f.text_field :content, class: 'form-control' %>
 		</div>
 		<div class="form-group">
-			<%= f.label :種別 %>
-			<%#= f.collection_select :label, Todolist.all,:id, :label, :include_blank => true %>
-			<%#= f.collection_select :delivery_id, current_end_user.deliveries, :id, :view_address_and_name,:include_blank => true %>
-			 <%#= f.collection_check_boxes(:tag_ids, Tag.all, :id, :name) do |tag| %>
+
+			<%= f.label :ラベル %>
+
+
+			<%= f.fields_for :label_lists do |list| %>
+				<%= list.label :label_id %>
+				<%= list.collection_select :label_id, Label.all, :id, :name, :include_blank => true %>
+			<% end %>
+
+			<%#= f.collection_select :label_id, Label.where(is_void: false), :id, :name, :include_blank => true %>
+
 		</div>
 		<!--編集ページの時のみ表示する-->
 		<% if controller.action_name == 'edit' %>
