--- a/app/views/public/todolists/_index.html.erb
+++ b/app/views/public/todolists/_index.html.erb
@@ -14,7 +14,9 @@
 			<th><%= "#{i + 1}: " %></th>
 			<td ><%= todolist.content %></td>
 			<td>
-				<span class="badge badge-secondary""><%= todolist.label %></span>
+				<% todolist.label_lists.each do |label_list| %>
+					<span class="badge badge-secondary"><%= label_list.label.name %></span>
+				<% end %>
 			</td>
 			<td>
 				<%= link_to edit_public_todolist_path(todolist), class: 'btn btn-sm btn-outline-success', style: 'border-radius: 30%' do %>
