--- a/app/views/public/todolists/index.html.erb
+++ b/app/views/public/todolists/index.html.erb
@@ -54,32 +54,33 @@
 			<% end %>
 
 			<% if @today_todolists.exists? %>
-
-
 				<table class="table table-hover table-responsive">
 					<thead>
 						<th>No.</th>
 						<th>リスト名</th>
-						<th>種別</th>
+						<th>ラベル</th>
 						<th>テスト用</th>
 						<th>チェック</th>
 						<th>編集</th>
 					</thead>
 					<tbody>
-					<% @today_todolists.each_with_index do |todolist, i| %>
+						<% @today_todolists.each_with_index do |todolist, i| %>
 						<!--todoリスト未達成のものだけ表示する-->
 						<% if todolist.done == false %>
 						<tr>
 							<th><%= "#{i + 1}: " %></th>
 							<td><%= todolist.content.truncate(30) %></td>
 							<td>
-								<span class="badge badge-secondary"><%#= todolist.label %></span>
+							<!--問題箇所------------------------------------------->
+								<% todolist.label_lists.each do |label_list| %>
+									<span class="badge badge-secondary"><%= label_list.label.name %></span>
+								<% end %>
+							<!--問題箇所------------------------------------------->
 							</td>
-							<!--テスト-->
+							<!--テスト用-->
 							<td><%= todolist.done %></td>
 							<td>
 								<%= form_with model: [:public, todolist], local: true do |f| %>
-
 									<%#= f.hidden_field :label, :value => todolist.label %>
 									<%= f.hidden_field :done, :value => true %><!--完了:trueを送りたい-->
 									<%= f.hidden_field :time_category, :value => todolist.time_category %>
@@ -89,8 +90,6 @@
 								<% end %>
 							</td>
 							<td>
-
-
 								<%= link_to edit_public_todolist_path(todolist), class: 'btn btn-outline-success', style: 'border-radius: 30%' do %>
 									<i class="fas fa-cogs"></i>
 								<% end %>
