--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -79,6 +79,10 @@
 			<p>テスト: コントローラから値を渡している</p>
 			<%= pie_chart @data %>
 
+
+			<%= pie_chart @test %>
+
+
 			<p>テスト6</p>
 			<%= pie_chart @chart,
 				id: 'data-chart',
