--- a/app/assets/stylesheets/todolist.scss
+++ b/app/assets/stylesheets/todolist.scss
@@ -1,5 +1,5 @@
 .todolist-set { /*todolistフォーム*/
-	border: 2px solid gray;
+	border: 2px dotted gray;
 	padding: 20px;
 	background-color: white;
 }
