--- a/app/views/public/todolists/_tab.html.erb
+++ b/app/views/public/todolists/_tab.html.erb
@@ -31,7 +31,6 @@
 							<th>No.</th>
 							<th>リスト名</th>
 							<th>ラベル</th>
-							<th>テスト用</th>
 							<th>チェック</th>
 							<th>編集</th>
 						</thead>
@@ -48,16 +47,14 @@
 									<% end %>
 								<!--問題箇所------------------------------------------->
 								</td>
-								<!--テスト用-->
-								<td><%= todolist.done %></td>
 								<td>
 									<%= form_with model: [:public, todolist], local: true do |f| %>
 										<%#= f.hidden_field :label, :value => todolist.label %>
-										<%= f.hidden_field :done, :value => true %><!--完了:trueを送りたい-->
+										<%= f.hidden_field :done, :value => false %><!--未完了:falseを送りたい-->
 										<%= f.hidden_field :time_category, :value => todolist.time_category %>
 										<%= f.hidden_field :content, :value => todolist.content %>
 
-										<%= f.submit '達成', class: 'btn btn-outline-info btn-sm' %>
+										<%= f.submit '未達成に戻す', class: 'btn btn-outline-info btn-sm' %>
 									<% end %>
 								</td>
 								<td>
