--- a/app/views/public/todolists/index.html.erb
+++ b/app/views/public/todolists/index.html.erb
@@ -16,7 +16,6 @@
 			</div>
 	  		<div class="card-body">
 				<p class="card-text"></p>
-				<!-- <h4>To doリスト作成</h4> -->
 				<%= render 'public/todolists/form', todolist: @todolist, obj: @todolist %>
 			</div>
 		</div>
@@ -34,104 +33,114 @@
 
 		<div class="tab-content">
 			<div id="list-tab1" class="tab-pane active">
-				<div class="form-set">
-				<h3>本日のTo do リスト</h3>
-
-					<%#= render 'public/todolists/index', todolists: @todolists %>
-			<!--ここから--------------------------------------------------------------->
-				<% if @today_todolists.exists? %>
-					<div class="text-right">
-						<button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#demoNormalModal">
-						    リセット
-						</button>
-
-						<!-- モーダルダイアログ -->
-						<div class="modal fade" id="demoNormalModal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
-						    <div class="modal-dialog" role="document">
-						        <div class="modal-content">
-						            <div class="modal-header">
-						                <h5 class="modal-title" id="demoModalTitle">確認</h5>
-						                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-						                    <span aria-hidden="true">&times;</span>
-						                </button>
-						            </div>
-						            <div class="modal-body">
-						                リスト内容が全て失われます。よろしいですか？
-						            </div>
-						            <div class="modal-footer">
-						                <button type="button" class="btn btn-secondary" data-dismiss="modal">閉じる</button>
-						                <%= link_to 'OK', public_todolists_delete_path, method: :delete ,class: 'btn btn-danger' %>
-						            </div>
-						        </div>
-						    </div>
-						</div>
+		<!-- 		<div class="form-set"> -->
+				<div class="card">
+					<div class="card-header">
+						<h5>本日のTo do リスト</h5>
 					</div>
+					<div class="card-body">
 
-					<table class="table table-hover table-responsive">
-						<thead>
-							<th>No.</th>
-							<th>リスト名</th>
-							<th>ラベル</th>
-							<th>テスト用</th>
-							<th>チェック</th>
-							<th>編集</th>
-						</thead>
-						<tbody>
-						<% @today_todolists.each_with_index do |todolist, i| %>
-							<% if todolist.done == false %>
-							<tr>
-								<th><%= "#{i + 1}: " %></th>
-								<td><%= todolist.content.truncate(30) %></td>
-								<td>
-								<!--問題箇所------------------------------------------->
-									<% todolist.label_lists.each do |label_list| %>
-										<span class="badge badge-secondary"><%= label_list.label.name %></span>
-									<% end %>
-								<!--問題箇所------------------------------------------->
-								</td>
-								<!--テスト用-->
-								<td><%= todolist.done %></td>
-								<td>
-									<%= form_with model: [:public, todolist], local: true do |f| %>
-										<%#= f.hidden_field :label, :value => todolist.label %>
-										<%= f.hidden_field :done, :value => true %><!--完了:trueを送りたい-->
-										<%= f.hidden_field :time_category, :value => todolist.time_category %>
-										<%= f.hidden_field :content, :value => todolist.content %>
+						<%#= render 'public/todolists/index', todolists: @todolists %>
+					<!--ここから--------------------------------------------------------------->
+					<% if @today_todolists.exists? %>
+						<div class="text-right">
+							<button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#demoNormalModal">
+							    リセット
+							</button>
 
-										<%= f.submit '達成', class: 'btn btn-outline-info btn-sm' %>
-									<% end %>
-								</td>
-								<td>
-									<%= link_to edit_public_todolist_path(todolist), class: 'btn btn-outline-success', style: 'border-radius: 30%' do %>
-										<i class="fas fa-cogs"></i>
-									<% end %>
-								</td>
-							</tr>
+							<!-- モーダルダイアログ -->
+							<div class="modal fade" id="demoNormalModal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
+							    <div class="modal-dialog" role="document">
+							        <div class="modal-content">
+							            <div class="modal-header">
+							                <h5 class="modal-title" id="demoModalTitle">確認</h5>
+							                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							                    <span aria-hidden="true">&times;</span>
+							                </button>
+							            </div>
+							            <div class="modal-body">
+							                リスト内容が全て失われます。よろしいですか？
+							            </div>
+							            <div class="modal-footer">
+							                <button type="button" class="btn btn-secondary" data-dismiss="modal">閉じる</button>
+							                <%= link_to 'OK', public_todolists_delete_path, method: :delete ,class: 'btn btn-danger' %>
+							            </div>
+							        </div>
+							    </div>
+							</div>
+						</div>
+
+						<table class="table table-hover table-responsive">
+							<thead>
+								<th>No.</th>
+								<th>リスト名</th>
+								<th>ラベル</th>
+								<th>テスト用</th>
+								<th>チェック</th>
+								<th>編集</th>
+							</thead>
+							<tbody>
+							<% @today_todolists.each_with_index do |todolist, i| %>
+								<% if todolist.done == false %>
+								<tr>
+									<th><%= "#{i + 1}: " %></th>
+									<td><%= todolist.content.truncate(30) %></td>
+									<td>
+									<!--問題箇所------------------------------------------->
+										<% todolist.label_lists.each do |label_list| %>
+											<span class="badge badge-secondary"><%= label_list.label.name %></span>
+										<% end %>
+									<!--問題箇所------------------------------------------->
+									</td>
+									<!--テスト用-->
+									<td><%= todolist.done %></td>
+									<td>
+										<%= form_with model: [:public, todolist], local: true do |f| %>
+											<%#= f.hidden_field :label, :value => todolist.label %>
+											<%= f.hidden_field :done, :value => true %><!--完了:trueを送りたい-->
+											<%= f.hidden_field :time_category, :value => todolist.time_category %>
+											<%= f.hidden_field :content, :value => todolist.content %>
+
+											<%= f.submit '達成', class: 'btn btn-outline-info btn-sm' %>
+										<% end %>
+									</td>
+									<td>
+										<%= link_to edit_public_todolist_path(todolist), class: 'btn btn-outline-success', style: 'border-radius: 30%' do %>
+											<i class="fas fa-cogs"></i>
+										<% end %>
+									</td>
+								</tr>
+								<% end %>
 							<% end %>
-						<% end %>
-						</tbody>
-					</table>
-					<span class="text-right">
-						<p><%= link_to '完了報告', public_todolists_delete_path, method: :delete, data: {confirm: 'リスト内容が全て失われます。よろしいですか？'},class: 'btn btn-outline-info' %></p>
-					</span>
+							</tbody>
+						</table>
+						<span class="text-right">
+							<p><%= link_to '完了報告', public_todolists_delete_path, method: :delete, data: {confirm: 'リスト内容が全て失われます。よろしいですか？'},class: 'btn btn-outline-info' %></p>
+						</span>
 
-					<span class="text-right">
-						<p><%= link_to 'リセット', public_todolists_delete_path, method: :delete, data: {confirm: 'リスト内容が全て失われます。よろしいですか？'},class: 'btn btn-outline-danger', style: 'border-radius:50%' %></p>
-					</span>
-				<% else %>
-				<!--todoリストをまだ一つも作成していない場合-->
-					Todoリストをまだ設定していませんか？<br />
-					To doリスト作成欄からTo doリストを作成してみましょう！
-				<% end %>
-				<!--ここまで--------------------------------------------------------------->
+						<span class="text-right">
+							<p><%= link_to 'リセット', public_todolists_delete_path, method: :delete, data: {confirm: 'リスト内容が全て失われます。よろしいですか？'},class: 'btn btn-outline-danger', style: 'border-radius:50%' %></p>
+						</span>
+					<% else %>
+					<!--todoリストをまだ一つも作成していない場合-->
+						Todoリストをまだ設定していませんか？<br />
+						To doリスト作成欄からTo doリストを作成してみましょう！
+					<% end %>
+					<!--ここまで--------------------------------------------------------------->
+					</div>
 				</div>
 			</div>
 
 			<div id="list-tab2" class="tab-pane">
-				<div class="form-set">
-				<h3>達成済みリスト</h3>
-					<%= render 'public/todolists/tab', todolists: @todolists %>
+				<div class="card">
+					<div class="card-header">
+						<h5>達成済みリスト</h5>
+					</div>
+					<div class="card-text">
+						<%= render 'public/todolists/tab', todolists: @todolists %>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+</div>
