[add]todolist-index/partial

--- a/app/views/public/relationships/_follow.html.erb
+++ b/app/views/public/relationships/_follow.html.erb
@@ -2,21 +2,18 @@
 <% if user != current_user %>
 
 	<% if user.followed_by?(current_user) %>
-	<th>フォロー済: </th>
-	<td><%= link_to public_user_relationship_path(user.id), method: :delete, remote: true do %>
-		  <i class="far fa-thumbs-up fa-lg">
-		  	<%= user.followers.count %>
-		  </i>
-		<% end %>
-	</td>
-<% else %>
-	<th>フォローする: </th>
-	<td><%= link_to public_user_relationships_path(user.id), method: :post, remote: true do %>
-	  	  <i class="far fa-thumbs-up fa-lg">
-	  	  	<%= user.followings.count %>
-	  	  </i>
-	  	<% end %>
-	</td>
+		<th>フォロー済:
+			<%= link_to public_user_relationship_path(user.id), method: :delete, remote: true do %>
+			  <i class="far fa-thumbs-up fa-lg"><%= user.followers.count %></i>
+			<% end %>
+		</th>>
+	<% else %>
+		<th>
+			フォローする:
+			<%= link_to public_user_relationships_path(user.id), method: :post, remote: true do %>
+		  	  <i class="far fa-thumbs-up fa-lg"><%= user.followings.count %></i>
+		  	<% end %>
+		</th>
 	<% end %>
 <% end %>
 
