--- a/app/views/public/todolists/edit.html.erb
+++ b/app/views/public/todolists/edit.html.erb
@@ -1,45 +1,45 @@
 <div class="row">
 	<div class="col-md-6">
-		<div class="form-set">
-		<h4>To doリスト編集</h4>
-
-		<%= render 'public/todolists/form', todolist: @todolist, obj: @todolist %>
+		<div class="card">
+		  <div class="card-header">
+            <h5>To doリスト編集</h5>
+          </div>
+          <div class="card-body">
+            <%= render 'public/todolists/form', todolist: @todolist, obj: @todolist %>
+          </div>
 
 		</div>
-	</div>
-</div>
 
+    <div class="button-group mt-3 ml-1">
+        <%= link_to '戻る', public_user_path(current_user), class: 'btn btn-dark' %>
 
-<%= link_to '戻る', public_user_path(current_user), class: 'btn btn-dark' %>
+        <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#deleteModal">
+            削除する
+        </button>
 
-
-
-
-
-<button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#deleteModal">
-    削除する
-</button>
-
-<!-- モーダルダイアログ -->
-<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="demoModalTitle">確認</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                To doリストの内容を削除しますか？
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">閉じる</button>
-                <%= link_to '削除する', public_todolist_path(@todolist),method: :delete, class: 'btn btn-outline-danger' %>
+        <!-- モーダルダイアログ -->
+        <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="demoModalTitle">確認</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        To doリストの内容を削除しますか？
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">閉じる</button>
+                        <%= link_to '削除する', public_todolist_path(@todolist),method: :delete, class: 'btn btn-outline-danger' %>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
+    </div>
+</div>
 
 
