--- a/app/views/public/todolists/index.html.erb
+++ b/app/views/public/todolists/index.html.erb
@@ -136,7 +136,7 @@
 					<div class="card-header">
 						<h5>達成済みリスト</h5>
 					</div>
-					<div class="card-text">
+					<div class="card-body">
 						<%= render 'public/todolists/tab', todolists: @todolists %>
 					</div>
 				</div>
