--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -31,10 +31,48 @@
 			</div>
 		</div>
 
+
+
+<!----------------------テスト------------------------------------->
+<h2>テスト</h2>
+	<!--1-1 userに紐づく全てのラベルの数-->
+	<p>userに紐づくリストの、ラベルの合計数:  <%= @user.todolists.count %></p>
+	<p><%#= @user.todolists.pluck %></p>
+
+
+<h3>テスト2</h3>
+<p>userに紐づくリストの、ラベル名全て: </p>
+<% @user.todolists.each do |todolist| %>
+
+	<% todolist.label_lists.each do |label_list| %>
+	<!--2 userに紐づくリストのラベルの名前全て-->
+	<p><%= label_list.label.name %></p>
+	<% end %>
+<% end %>
+
+
+<h2>テスト3</h2>
+	<!--3-1 userに紐づくラベルの内、リストが達成されている（done:true）ものの合計-->
+	<!--コントローラ:  @user.todolists.where(done: true).pluck(:done).count -->
+	<p>userに紐づくラベルの内、リストが達成されている（done:true）ものの合計</p>
+	<p><%= @done_list_sum %></p>
+
+	<!-- 3-2 userに紐づくラベルの内、リストが達成されている（done:true）もののリスト名-->
+	<!--3-3 userに紐づくラベルの内、リストが達成されているもの（done:true)の、リスト名ごとの数-->
+	<% @done_lists.each do |done_list| %>
+		<%= done_list.label_lists.count %>
+
+
+		<% done_list.label_lists.each do |label_list| %>
+		<!--3-2--><p><%= label_list.label.name %></p>
+		<!--3-3--><p><%#= label_list.labels.count %></p>
+		<% end %>
+	<% end %>
+
+<%= @user.hoge %>
+<!----------------------テスト------------------------------------->
+
 	</div>
-
-
-
 
 
 
@@ -47,27 +85,41 @@
 
 			<div class="card-body">
 				<div class="card-text">
-					<p>テスト: コントローラから値を渡している</p>
+					<p>テスト１: 直接データ投入</p>
 				</div>
-				<%= pie_chart @data %>
+				<%= pie_chart @example %>
+
+				 <%= line_chart @example %>
 			</div>
 
-			<div class="card-body">
-				<%= pie_chart @test %>
 
+			<div class="card-body">
 				<div class="card-text">
-					<p>テスト6</p>
+					<p>テスト２　:モデルから取得したデータをコントローラで定義</p>
 				</div>
+				<div class="card-body">
+				<%= pie_chart @chart_one %>
+				 <%= line_chart @data_one %>
+
+
+				 <%= pie_chart @chart_second %>
+				 <%= line_chart @data_second %>
+
+
 				<%= pie_chart @chart,
 					id: 'data-chart',
 	                 width: '300px',
 	                 height: '300px',
 	                 colors: [['#adff2f'],['#ffd700'],['#00bfff']] %>
+	            </div>
+
 	        </div>
 		</div>
 	</div>
 
 </div>
+
+
 
 
 
