--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -87,7 +87,7 @@
 				<div class="card-text">
 					<p>テスト１: 直接データ投入</p>
 				</div>
-				<%= pie_chart @example %>
+				<%= pie_chart @user.hoge %>
 
 				 <%= line_chart @example %>
 			</div>
