[add]board-sidebar

--- a/app/views/public/todolists/_form.html.erb
+++ b/app/views/public/todolists/_form.html.erb
@@ -39,6 +39,7 @@
 		</div>
 		<div class="action">
 			<%= f.submit '保存する', class: 'btn btn-outline-info' %>
+			<%= f.submit "clear", type: :reset %>
 		</div>
 
 	<% end %>
